# image-prosesing

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
cmake/: download_waifu2x.cmake
python/: requirements.txt  setup.py
python/converters/: __init__.py  image_to_pdf.py  pdf_to_image.py  pdf_to_ppt.py  pdf_to_word.py  ppt_to_pdf.py  word_to_pdf.py
python/image_ml/: __init__.py  bindings.py  enhance.py  models.py  pipeline.py
rust-core/: Cargo.toml
rust-core/image-pipeline/: Cargo.toml
rust-core/image-pipeline-wasm/: Cargo.toml
rust-core/image-pipeline-wasm/src/: lib.rs
rust-core/image-pipeline/src/: error.rs  ffi.rs  filters.rs  lib.rs  simd.rs
web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
web/src/: App.tsx  main.tsx  vite-env.d.ts
web/src/components/: FilterControls.tsx  ImageCanvas.tsx  ImageUploader.tsx  ProcessingIndicator.tsx
web/src/hooks/: useImageProcessor.ts
web/src/pages/: Editor.tsx  Home.tsx
web/src/styles/: index.css
web/src/utils/: aiUpscaler.ts
