[workspace]
resolver = "2"
members = ["image-pipeline", "image-pipeline-wasm"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Image Processing Pipeline"]
license = "MIT"

[workspace.dependencies]
image = "0.25"
rayon = "1.10"
thiserror = "1.0"

[profile.release]
opt-level = "s"
lto = true
